name: ghcjs-modeler
version: 0.1
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: Modelling OpenGL prototype
description:
    WebGL application compiled by GHCJS.
    Allows viewing, rotating and moving buildings in 3D.
    To be connected to computing backend (server).
category: OpenGL, WebGL
author: Artem Chirkin

executable ghcjs-modeler
    main-is: Main.hs
    build-depends:
        geojson >=1.3,
        primitive >=0.5.4.0,
        containers >=0.5.6.2,
        mtl >=2.1 && <2.3,
        base >=4.2 && <5,
        ghcjs-dom >=0.1,
        fgeom >=0.2.2,
        ghcjs-base >=0.1.0.0,
        ghcjs-webgl >=0.2 && <2,
        aeson >=0.9.0.1 && <0.10
    cpp-options: -DGHCJS_BROWSER
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        GUI.LuciClient
        GUI.PointerEvent
        Model.City
        Model.Grid
        Model.CityObject
        Model.RadianceService
        Model.ScalarField
        SmallGL.Helpers
        SmallGL.Shader
        Drawable.World
        Drawable.OCCamera
    ghc-options: -Wall -O2 -DGHCJS_BROWSER

