name: ghcjs-modeler
version: 0.2
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: Modelling OpenGL prototype
description:
    WebGL application compiled by GHCJS.
    Allows viewing, rotating and moving buildings in 3D.
    To be connected to computing backend (server).
category: OpenGL, WebGL
author: Artem Chirkin

executable ghcjs-modeler
    main-is: Main.hs
    build-depends:
        geojson >=1.3,
        primitive >=0.5.4.0,
        base >=4.2 && <5,
        fgeom >=0.2.2,
        ghc-prim >=0.4 && <1,
        ghcjs-base >=0.1.0.0,
        ghcjs-webgl >=0.2 && <2,
        geojson >=1.3,
        aeson >=0.9.0.1 && <0.10,
        template-haskell >=2.10.0.0 && <2.11,
        containers >=0.5.6.3 && <0.6
    cpp-options: -DGHCJS_BROWSER
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Controllers.ElementResizing
        Controllers.GUIEvents
        Controllers.GeoJSONFileImport
        Controllers.LuciClient
        Controllers.Pointer
        GHCJS.Useful
        Program
        Program.Model.Camera
        Program.Model.City
        Program.Model.CityGround
        Program.Model.CityObject
        Program.Model.DecorativeGrid
        Program.Model.GeoJSON
        Program.Model.ScalarField
        Program.Reactions
        Program.Reactions.CameraBehavior
        Program.Reactions.CitySelection
        Program.Reactions.GeometryChanges
        Program.Reactions.LuciProcesses
        Program.Reactions.SelectorRendering
        Program.Reactions.ServiceFinish
        Program.Reactions.ServiceRun
        Program.Reactions.ViewRendering
        Program.View
        Program.View.CityGroundView
        Program.View.CityObjectView
        Program.View.CityView
        Program.View.DecorativeGridView
        Reactive
        Services
        Services.RadianceService
        SmallGL.Helpers
        SmallGL.Shader
        SmallGL.WritableVectors
    ghc-options: -Wall -O2 -ddump-splices

