name: ghcjs-modeler
version: 0.2
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: Modelling OpenGL prototype
description:
    WebGL application compiled by GHCJS.
    Allows viewing, rotating and moving buildings in 3D.
    To be connected to computing backend (server).
category: OpenGL, WebGL
author: Artem Chirkin

executable ghcjs-modeler
    main-is: Main.hs
    build-depends:
        fastvec ==0.1.*,
        base >=4.8 && <5,
        ghc-prim >=0.4,
        ghcjs-base ==0.2.*,
        ghcjs-prim ==0.1.*,
        ghcjs-webgl ==0.3.*,
        template-haskell >=2.10,
        containers >=0.5.6.3,
        text >=1.2.0.4
    cpp-options: -DGHCJS_BROWSER
    js-sources:
        jsbits/PointSet.js
        jsbits/numeric.js
        jsbits/earcut.js
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Controllers.ElementResizing
        Controllers.GUIEvents
        Controllers.GeoJSONFileImport
        Controllers.LuciClient
        Controllers.Pointer
        Data.Geometry.Structure
        Data.Geometry.Structure.LinearRing
        Data.Geometry.Structure.PointSet
        Data.Geometry.Structure.Polygon
        GHCJS.Useful
        SmallGL.Helpers
        SmallGL.Shader
        SmallGL.WritableVectors
        Program
        Program.Model.Camera
        Program.Model.WiredGeometry
        Program.Reactions
        Program.Reactions.CameraBehavior
        Program.Reactions.CitySelection
        Program.Reactions.GeometryChanges
        Program.Reactions.LuciProcesses
        Program.Reactions.SelectorRendering
        Program.Reactions.ServiceFinish
        Program.Reactions.ServiceRun
        Program.Reactions.ViewRendering
        Program.Reactions.ViewSubmitPopup
        Program.View
        Program.View.WiredGeometryView
        Reactive
    ghc-options: -Wall -O2 -ddump-splices

