name: qua-view
version: 0.4
cabal-version: >=1.22
build-type: Custom
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/achirkin
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: Modelling OpenGL prototype
description:
    WebGL application compiled by GHCJS.
    Allows viewing, rotating and moving buildings in 3D.
    To be connected to computing backend (server).
category: OpenGL, WebGL
author: Artem Chirkin

flag dev
    description:
        Turn on development settings.

custom-setup
    setup-depends:
        base >=4.8 && <5,
        Cabal >=1.22,
        directory >=1.3,
        filepath >=1.4

executable qua-view

    if flag(dev)
        cpp-options: -DDEVELOPMENT -DLOGLEVEL=4
        ghc-options: -O0
    else
        cpp-options: -DLOGLEVEL=2
        ghc-options: -O2 -dedupe
    main-is: qua-view.hs
    build-depends:
        base >=4.8 && <5,
        ghcjs-base >=0.2.0.0,
        ghcjs-prim >=0.1.0.0,
        reflex >=0.5,
        reflex-dom >=0.4,
        reflex-animated -any,
        text >=1.2.0.0,
        containers >=0.5,
        ghcjs-dom-jsffi >=0.9.0.0,
        ghcjs-webgl -any,
        transformers -any,
        time -any,
        mtl -any,
        lens -any,
        dimensions -any,
        easytensor -any,
        hashable >=1.2,
        template-haskell -any,
        shakespeare >=2,
        blaze-html >=0.8,
        filepath >=1.4,
        data-default >=0.7,
        dependent-map >=0.2.4,
        dependent-sum >=0.4,
        dependent-sum-template >=0.0.0.6,
        monad-control >=1.0,
        qua-types >=0.1
    cpp-options: -DGHCJS_BROWSER
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Commons
        Commons.Http
        Commons.Import
        Commons.NoReflex
        Commons.NoReflex.EasyTensorJSFFI
        Commons.NoReflex.Events
        Commons.NoReflex.Logger
        Commons.NoReflex.Import
        Commons.NoReflex.Local
        Commons.NoReflexDom
        Commons.NoReflexDom.EventMap
        Commons.NoReflexDom.Import
        Commons.NoReflexDom.Local
        Commons.NoReflexDom.Logger
        Commons.NoReflexDom.QuaViewMonad
        Commons.QuaViewMonad
        Model.Camera
        Model.Scenario
        Model.Scenario.Object
        Model.Scenario.Object.Geometry
        Model.Scenario.Properties
        Model.Scenario.Statistics
        SmallGL
        SmallGL.Helpers
        SmallGL.RenderingCell
        SmallGL.Shader
        SmallGL.Types
        Widgets.Canvas
        Widgets.Commons
        Widgets.ControlButtons
        Widgets.ControlPanel
        Widgets.Generation
        Widgets.LoadingSplash
        Widgets.Modal
        Widgets.Modal.BrowseScenarios
        Widgets.Modal.EdxGuide
        Widgets.Modal.Help
        Widgets.Modal.SaveScenario
        Widgets.Modal.Share
        Widgets.Modal.SubmitProposal
        Widgets.Tabs
        Widgets.Tabs.Geometry
        Widgets.Tabs.Info
        Widgets.Tabs.Services
        Widgets.UserMessages
        Workers
        Workers.LoadGeometry
        Workers.Types
    ghc-options: -Wall -fwarn-tabs

executable qua-worker-loadgeometry

    if flag(dev)
        cpp-options: -DDEVELOPMENT -DLOGLEVEL=4
        ghc-options: -O0
    else
        cpp-options: -DLOGLEVEL=2
        ghc-options: -O2 -dedupe
    main-is: qua-worker-loadgeometry.hs
    build-depends:
        base >=4.8 && <5,
        ghcjs-base >=0.2.0.0,
        ghcjs-prim >=0.1.0.0,
        ghcjs-webgl -any,
        text >=1.2.0.0,
        containers >=0.5,
        ghcjs-dom-jsffi >=0.9.0.0,
        transformers -any,
        template-haskell -any,
        time -any,
        mtl -any,
        lens -any,
        dimensions -any,
        easytensor -any,
        hashable >=1.2,
        filepath >=1.4,
        data-default >=0.7,
        dependent-map >=0.2.4,
        dependent-sum >=0.4,
        dependent-sum-template >=0.0.0.6,
        conduit >=1.2.0
    cpp-options: -DGHCJS_BROWSER -DISWORKER
    js-sources:
        src/Model/GeoJSON/Coordinates.js
        src/Model/GeoJSON/earcut.min.js
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Commons.NoReflex
        Commons.NoReflex.EasyTensorJSFFI
        Commons.NoReflex.Events
        Commons.NoReflex.Import
        Commons.NoReflex.Local
        Commons.NoReflex.Logger
        Model.GeoJSON.Coordinates
        Model.GeoJSON.Coordinates.Wgs84
        Model.GeoJSON.Scenario
        Model.Scenario
        Model.Scenario.Object
        Model.Scenario.Object.Geometry
        Model.Scenario.Properties
        Model.Scenario.Statistics
        SmallGL.Types
        Workers
        Workers.Commons
        Workers.LoadGeometry
        Workers.Types
    ghc-options: -Wall -fwarn-tabs

test-suite geojson-tests

    if !flag(dev)
        buildable: False
    type: exitcode-stdio-1.0
    main-is: geojson-tests.hs
    build-depends:
        Cabal >=1.20,
        base >=4.8 && <5,
        ghcjs-base >=0.2.0.0,
        ghcjs-prim >=0.1.0.0,
        ghcjs-webgl -any,
        text >=1.2.0.0,
        containers >=0.5,
        ghcjs-dom-jsffi >=0.9.0.0,
        transformers -any,
        template-haskell -any,
        time -any,
        mtl -any,
        lens -any,
        dimensions -any,
        easytensor -any,
        hashable >=1.2,
        filepath >=1.4,
        data-default >=0.7,
        dependent-map >=0.2.4,
        dependent-sum >=0.4,
        dependent-sum-template >=0.0.0.6,
        conduit >=1.2.0
    cpp-options: -DISWORKER -DLOGLEVEL=4 -DDEVELOPMENT
    js-sources:
        src/Model/GeoJSON/Coordinates.js
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Commons.NoReflex
        Commons.NoReflex.EasyTensorJSFFI
        Commons.NoReflex.Events
        Commons.NoReflex.Import
        Commons.NoReflex.Local
        Commons.NoReflex.Logger
        Model.GeoJSON.Coordinates
        Model.GeoJSON.Scenario
        Model.Scenario
        Model.Scenario.Object
        Model.Scenario.Object.Geometry
        Model.Scenario.Properties
        Model.Scenario.Statistics
        SmallGL.Types
    ghc-options: -Wall -fwarn-tabs -O0
